update images & alt of images

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 										src="./assets/img/pageItem/kv/kv-title.png" alt="台新車貸 加速圓夢不等待">
 									<a class="" href="" target="_blank">
 										<img class="key-visual-title" src="./assets/img/pageItem/kv/kv-btn.png"
-											alt="車貸線上辦 限時好禮等著你!">
+											alt="車貸線上辦 撥款後限時好禮等著你!">
 									</a>
 								</div>
 							</div>
@@ -162,7 +162,7 @@
 					<section id="sign-sec"
 						class="col-12 pt-3 pt-md-4 mx-auto d-flex position-relative flex-wrap align-items-center justify-content-center sign-sec">
 						<div class="col-11 col-lg-6 pr-2  pr-lg-4 text-left">
-							<img class="position-relative" src="./assets/img/pageItem/A-HL.png" alt="線上申請 還有好禮等你拿">
+							<img class="position-relative" src="./assets/img/pageItem/A-HL.png" alt="線上申請 撥款後還有好禮等你拿">
 							<p class="text-left">活動時間 ｜ 2023/4/10~2023/6/30<br>
 								於活動期間內線上申請汽車貸款且於7/7(含)前成功撥款，即可獲得台新Point抽獎機會一次。
 							</p>
