install the Google tag(gtag.js)/gtag event snippet

--- a/index.html
+++ b/index.html
@@ -2,6 +2,30 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="zh-TW" lang="zh-TW">
 
 <head>
+	<!-- Google tag (gtag.js) -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=AW-347724334"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag() { dataLayer.push(arguments); }
+		gtag('js', new Date());
+		gtag('config', 'AW-347724334');
+	</script>
+	<!-- Event snippet for BTN_點我線上申辦 conversion page
+In your html page, add the snippet and call gtag_report_conversion when someone clicks on the chosen link or button. -->
+	<script>
+		function gtag_report_conversion(url) {
+			var callback = function () {
+				if (typeof (url) != 'undefined') {
+					window.location = url;
+				}
+			};
+			gtag('event', 'conversion', {
+				'send_to': 'AW-347724334/2U5KCPiuueQCEK6056UB',
+				'event_callback': callback
+			});
+			return false;
+		}
+	</script>
 	<!-- DataLayer -->
 	<script>
 		window.dataLayer = window.dataLayer || [];
